# stark-serialport-example

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  README-C.md  README-CN.md  README-zh.md  README.md  README.zh.md  download-lib.bat  download-lib.sh
c/: Makefile  README.md  common.mk
c/common/: can_common.cpp  can_common.h  dfu_common.cpp  dfu_common.h  platform_compat.h  stark_common.cpp  stark_common.h  trajectory_control.h  zqwl_common.h
c/demo/: Makefile  README.md  auto_detect.cpp  debug_detect.cpp  hand_demo.cpp  hand_dfu.cpp  hand_monitor.cpp  hand_protolbuf_test.cpp
linux/: Makefile  README-CN.md  README.md  README.zh.md  download-lib.sh  list_ports.c  revo2_ctrl.cpp  revo2_ctrl_multi.cpp  revo2_customed_modbus.cpp  revo2_customed_modbus_async.cpp  revo2_ethercat.cpp  revo2_touch.cpp  rs485.c  stark_customed_modbus.cpp  stark_customed_modbus_async.cpp  stark_example.cpp  stark_multi_example.cpp  stark_v1.cpp  stark_v1_touch.cpp  stark_v2.cpp
linux/common/: can_common.cpp  can_common.h  dfu_common.cpp  dfu_common.h  stark_common.cpp  stark_common.h  trajectory_control.h
linux/revo1/: Makefile  README.md  revo1_basic_collector.cpp  revo1_can.cpp  revo1_can_customed.cpp  revo1_ctrl.cpp  revo1_ctrl_multi.cpp  revo1_customed_can.cpp  revo1_customed_modbus.cpp  revo1_customed_modbus_async.cpp  revo1_dfu.cpp  revo1_touch.cpp  revo1_touch_collector.cpp  stark_customed_modbus.cpp  stark_customed_modbus_async.cpp  stark_example.cpp  stark_multi_example.cpp  stark_v1.cpp
linux/revo2/: Makefile  README.md  revo2_basic_collector.cpp  revo2_can_ctrl.cpp  revo2_can_dfu.cpp  revo2_canfd.cpp  revo2_canfd_customed.cpp  revo2_canfd_dfu.cpp  revo2_canfd_touch.cpp  revo2_ctrl.cpp  revo2_ctrl_multi.cpp  revo2_customed_canfd.cpp  revo2_customed_modbus.cpp  revo2_customed_modbus_async.cpp  revo2_dfu.cpp  revo2_ethercat.cpp  revo2_touch.cpp  revo2_touch_collector.cpp  revo2_touch_pressure_collector.cpp
linux/revo2_ec/: Makefile  README.md  ec_app.cpp  ec_app.h  ec_common.h  ec_constants.h  ec_control.cpp  ec_control.h  ec_demo_helpers.cpp  ec_feedback.cpp  ec_feedback.h  ec_macros.h  ec_pdo.cpp  ec_pdo.h  ec_sdo.cpp  ec_sdo.h  ec_utils.cpp  ec_utils.h  kill_ethercat_processes.sh  revo2_multi_pdo.cpp  revo2_pdo.cpp  revo2_sdo.cpp  revo2_touch_pdo.cpp  revo2_touch_pressure_pdo.cpp  revo2_touch_pressure_sdo.cpp  revo2_touch_sdo.cpp
mac/: Makefile  download-lib.sh  ota.cpp  rs485.c  stark_customed_modbus.cpp  stark_example.cpp  stark_multi_example.cpp  stark_v1.cpp  stark_v1_touch.cpp  stark_v2.cpp
python/: .gitignore  README-CN.md  README.md  README.zh.md  common_imports.py  common_init.py  common_socketcan.py  common_utils.py  example.py  requirements.txt  stark_logger.py  stark_sdk.py
python/canopen_example/: BC_hand_thumb_250118.eds  BC_hand_thumb_250121.eds  canopen_utils.py  example_canopen_get.py  example_canopen_touch_sensor.py  model.py  requirements.txt
python/demo/: README.md  auto_detect.py  comm_frequency_test.py  comm_frequency_test_zlg.py  hand_demo.py  hand_dfu.py  hand_monitor.py  sdk_enum_test.py
python/edu/: README.md  armband_example.py  edu_utils.py  filters_sdk.py  glove_example.py  logger.py  model.py  requirements.txt  stark_example.py  utils.py
python/gui/: README.md  __init__.py  action_sequence_panel.py  connection_panel.py  constants.py  data_collector_panel.py  dfu_panel.py  hand_visualization.py  i18n.py  main.py  main_window.py  motor_control_panel.py  pressure_touch_panel.py  realtime_monitor_panel.py  requirements.txt  shared_data.py  styles.py  system_config_panel.py  timing_test_panel.py  touch_sensor_panel.py
python/lib/: __init__.py  stark_class.py  stark_enums.py  stark_logging.py  stark_sdk.py  utils.py
python/modbus_example/: device_listener.py  dfu.py  example_Modbus_OTA.py  example_Modbus_actions.py  example_Modbus_async.py  example_Modbus_control.py  example_Modbus_get.py  example_Modbus_multi.py  example_Modbus_touch_sensor.py  example_Modbus_update_cfg.py  inspect_class.py  modbus_client_utils.py  requirements.txt  revo2_action_seq.py  revo2_ctrl_multi.py  revo2_utils.py  stark_inspect.py  stark_modbus_actions.py  stark_modbus_actions_v2.py  stark_modbus_async.py  stark_modbus_dfu.py  stark_modbus_get.py  stark_modbus_multi.py  stark_modbus_touch_feedback_example.py  stark_modbus_touch_sensor.py  stark_modbus_update_cfg.py  stark_modbus_v2.py  stark_utils.py  zqwl_canfd.py  zqwl_canfd_dfu.py  zqwl_win.py
python/protobuf_example/: example_OTA.py  example_async.py  (+6 more)
ros2_stark_ws/: README.md  launch_ethercat.sh  launch_test.sh  stark_ethercat_manager.sh  stark_serial_manager.sh
ros2_stark_ws/src/ros2_ethercat_controller/: CMakeLists.txt  package.xml
ros2_stark_ws/src/ros2_ethercat_controller/config/: params_revo2_ethercat.yaml
ros2_stark_ws/src/ros2_ethercat_controller/include/ros2_ethercat_controller/: stark_ec_node.hpp
ros2_stark_ws/src/ros2_ethercat_controller/launch/: ec_launch.py
ros2_stark_ws/src/ros2_ethercat_controller/scripts/: stark_ec_client.py
ros2_stark_ws/src/ros2_ethercat_controller/src/: stark_ec_node.cpp
ros2_stark_ws/src/ros2_stark_controller/: CMakeLists.txt  package.xml
ros2_stark_ws/src/ros2_stark_controller/config/: params.yaml  params_revo1_can.yaml  params_revo2.yaml  params_revo2_canfd.yaml  params_v1.yaml  params_v1_touch.yaml  params_v2.yaml
ros2_stark_ws/src/ros2_stark_controller/include/ros2_stark_controller/: stark-sdk.h  stark_node.hpp  zcan.h
ros2_stark_ws/src/ros2_stark_controller/launch/: stark_launch.py
ros2_stark_ws/src/ros2_stark_controller/scripts/: stark_node_client.py  stark_position_control.py
ros2_stark_ws/src/ros2_stark_controller/src/: stark_node.cpp
ros2_stark_ws/src/ros2_stark_interfaces/: CMakeLists.txt  package.xml
ros2_stark_ws/src/ros2_stark_interfaces/msg/: MotorStatus.msg  SetMotorMulti.msg  SetMotorSingle.msg  TouchStatus.msg
ros2_stark_ws/src/ros2_stark_interfaces/srv/: GetDeviceInfo.srv  SetMotorMulti.srv  SetMotorPositions.srv  SetMotorSingle.srv  SetMotorSpeeds.srv
win/: Makefile  revo1_can.cpp  revo1_ctrl.cpp  revo2_canfd.cpp
(+218 files in other folders)
